--- a/IKRPG/res/menu/main_menu.xml
+++ b/IKRPG/res/menu/main_menu.xml
@@ -1,6 +1,6 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android">
 	<item android:id="@+id/new_character"
-		android:title="Make new Character"
+		android:title="@string/new_character_button_title"
 		android:icon="@android:drawable/ic_input_add"
 		android:showAsAction="ifRoom|withText" />
 </menu>
