--- a/IKRPG/res/layout/list_item_choose_advancement_points.xml
+++ b/IKRPG/res/layout/list_item_choose_advancement_points.xml
@@ -22,14 +22,14 @@
 			android:id="@+id/chooseAdvancementPointsDecrementButton"
 			android:layout_width="wrap_content"
 			android:layout_height="wrap_content"
-			android:text="-"/>
+			android:text="@string/decrease_label"/>
 		
 		<Button
 			android:id="@+id/chooseAdvancementPointsIncrementButton"
 			android:layout_width="wrap_content"
 			android:layout_height="wrap_content"
 			android:layout_marginLeft="5dp"
-			android:text="+" />
+			android:text="@string/increase_label" />
 		
 		<TextView
 			style="@style/textLabel"
